now books can be issued

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/Library_Management_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=C:\\Users\\Indunil Sensly\\Downloads\\jdatechooser\\DateChooser.jar
+file.reference.DateChooser.jar-1=D:\\Softwares\\JAVA\\jdatechooser\\DateChooser.jar
 file.reference.JTattoo-1.6.11.jar=JTattoo-1.6.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.JTattoo-1.6.11.jar}
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.DateChooser.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
